--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "babel-preset-stage-0": "^6.3.13",
     "babel-runtime": "^5.8.34",
     "body-parser": "^1.14.2",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "postcss": "^5.0.13",
+    "precss": "^1.3.0"
   }
 }
