--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-runtime": "^5.8.34",
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
+    "jade": "^1.11.0",
     "postcss": "^5.0.13",
     "precss": "^1.3.0"
   }
