--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run build:server && NODE_ENV=production nodemon index.js",
     "start:server": "NODE_ENV=development nodemon index.js --watch src",
-    "build:server": "NODE_ENV=production rollup -c"
+    "build:server": "NODE_ENV=production rollup -c",
+    "build:client": "webpack --config webpack.config.prod.js"
   },
   "bin": {
     "transformers": "cli.js"
@@ -21,7 +23,10 @@
   "files": [
     "cli.js",
     "index.js",
-    "server.js"
+    "server.js",
+    "webpack-assets.json",
+    "templates",
+    "build"
   ],
   "author": "EGOIST <0x142857@gmail.com>",
   "license": "MIT",
@@ -30,10 +35,22 @@
   },
   "homepage": "https://github.com/egoist/transformers#readme",
   "devDependencies": {
+    "assets-webpack-plugin": "^3.2.0",
+    "babel-loader": "^6.2.0",
     "babel-register": "^6.3.13",
+    "css-loader": "^0.23.1",
     "nodemon": "^1.8.1",
     "rollup": "^0.22.0",
-    "rollup-plugin-babel": "^2.2.0"
+    "rollup-plugin-babel": "^2.2.0",
+    "style-loader": "^0.13.0",
+    "vue": "^1.0.13",
+    "vue-hot-reload-api": "^1.2.2",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^7.4.0",
+    "vue-router": "^0.7.7",
+    "webpack": "^1.12.9",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
     "babel-core": "^6.3.26",
