--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "babel-register": "^6.3.13",
     "css-loader": "^0.23.1",
     "nodemon": "^1.8.1",
+    "redux": "^3.0.5",
+    "redux-devtools": "^2.1.5",
+    "redux-thunk": "^1.0.2",
+    "revue": "^1.2.44",
     "rollup": "^0.22.0",
     "rollup-plugin-babel": "^2.2.0",
     "style-loader": "^0.13.0",
@@ -61,6 +65,7 @@
     "babel-preset-stage-0": "^6.3.13",
     "babel-runtime": "^5.8.34",
     "body-parser": "^1.14.2",
+    "css-whitespace": "^1.1.1",
     "express": "^4.13.3",
     "jade": "^1.11.0",
     "postcss": "^5.0.13",
