--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build:server && NODE_ENV=production nodemon index.js",
-    "start:server": "NODE_ENV=development nodemon index.js --watch src",
-    "build:server": "NODE_ENV=production rollup -c",
-    "build:client": "webpack --config webpack.config.prod.js"
+    "start": "npm run build && NODE_ENV=production node index.js",
+    "start:win": "npm run build:win && set NODE_ENV=production && node index.js",
+    "dev": "NODE_ENV=development nodemon index.js --watch src",
+    "dev:win": "set NODE_ENV=development && nodemon index.js --watch src",
+    "build": "NODE_ENV=production rollup -c",
+    "build:win": "set NODE_ENV=production && rollup -c"
   },
   "bin": {
     "transformers": "cli.js"
@@ -35,32 +37,16 @@
   },
   "homepage": "https://github.com/egoist/transformers#readme",
   "devDependencies": {
-    "assets-webpack-plugin": "^3.2.0",
-    "babel-loader": "^6.2.0",
+    "babel-preset-es2015-rollup": "^1.0.0",
     "babel-register": "^6.3.13",
-    "css-loader": "^0.23.1",
     "nodemon": "^1.8.1",
-    "redux": "^3.0.5",
-    "redux-devtools": "^2.1.5",
-    "redux-thunk": "^1.0.2",
-    "revue": "^1.2.44",
     "rollup": "^0.22.0",
-    "rollup-plugin-babel": "^2.2.0",
-    "style-loader": "^0.13.0",
-    "vue": "^1.0.13",
-    "vue-hot-reload-api": "^1.2.2",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^7.4.0",
-    "vue-router": "^0.7.7",
-    "webpack": "^1.12.9",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0"
+    "rollup-plugin-babel": "^2.2.0"
   },
   "dependencies": {
     "babel-core": "^6.3.26",
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
-    "babel-preset-es2015-rollup": "^1.0.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-runtime": "^5.8.34",
